[gd_scene load_steps=3 format=3 uid="uid://bymbr517f7ic2"]

[ext_resource type="Script" path="res://Menus/OptionsTabs/SliderCombo.gd" id="1_lok1f"]
[ext_resource type="Script" path="res://Menus/OptionsTabs/SliderValue.gd" id="1_p7yam"]

[node name="SliderCombo" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_lok1f")

[node name="Lbl" type="Label" parent="."]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
tooltip_text = "Affects how bright or dark the scene is. You may need to change this depending on your screen settings."
mouse_filter = 0
horizontal_alignment = 2
vertical_alignment = 1

[node name="HSlider" type="HSlider" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
step = 0.1
value = 1.0
tick_count = 10
ticks_on_borders = true

[node name="ValueLbl" type="Label" parent="."]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
text = "1"
horizontal_alignment = 1
clip_text = true
text_overrun_behavior = 1
script = ExtResource("1_p7yam")

[node name="BtnReset" type="Button" parent="."]
layout_mode = 2
text = "Reset"

[connection signal="drag_ended" from="HSlider" to="." method="_on_h_slider_drag_ended"]
[connection signal="value_changed" from="HSlider" to="ValueLbl" method="_on_h_slider_value_changed"]
[connection signal="pressed" from="BtnReset" to="." method="_on_btn_reset_pressed"]
